--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -76,6 +76,9 @@
                     <li>
                         <a th:href="@{/users}">查询用户</a>
                     </li>
+                    <li>
+                        <a th:href="@{/users/add}">添加用户</a>
+                    </li>
                 </ul>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
